# gi-autotools

./: .gitignore  Makefile.am  README.md  configure.ac  hello.rb
glib/: Makefile.am  hello.cpp  hello.hpp
src/: Makefile.am  greeting.cpp  greeting.hpp  main.cpp
